# pyxel-physics

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
examples/: gravity.py  pong.py
phys/: __init__.py  aabb.py  body.py  circle.py  collision.py  decorators.py  mat22.py  poly.py  segment.py  space.py  transform.py  vec2d.py
